--- a/index.html
+++ b/index.html
@@ -64,14 +64,13 @@
 
   <main>
     <div class="mv">
-      <p class="mv__catch">ラフな髪型でラフにお洒落しよう。</p>
 
       <div class="swiper Mvswiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="assets/images/mv-image-01.jpg" alt=""></div>
-          <div class="swiper-slide"><img src="assets/images/mv-image-02.jpg" alt=""></div>
-          <div class="swiper-slide"><img src="assets/images/mv-image-03.jpg" alt=""></div>
-          <div class="swiper-slide"><img src="assets/images/mv-image-04.jpg" alt=""></div>
+          <div class="swiper-slide"><p class="mv__catch">ラフな髪型でラフにお洒落しよう。</p><img src="assets/images/mv-slide-01.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="assets/images/mv-slide-02.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="assets/images/mv-slide-03.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="assets/images/mv-slide-04.jpg" alt=""></div>
         </div>
         <!-- /swiper-wrapper -->
         <div class="swiper-pagination"></div>
