--- a/about.html
+++ b/about.html
@@ -82,11 +82,11 @@
       </div>
       <!-- breadcrumb -->
 
-      <h2 class="heading page-heading en">about<span class="jp mt10">僕について</span></h2>
+      <h2 class="heading page-heading en fadeUp">about<span class="jp mt10">僕について</span></h2>
   
-      <p class="page-lead">美容師の技術、うまさは正直行ってみないとわからないですよね。僕の考えとしてはライフスタイルやファッションに共通点がある美容師が髪型を作った方がファッションから髪型を作るのが上手いので似合わせられると思うんですよね。そこで僕のファッションやライフスタイルを紹介したいと思います！</p>
+      <p class="page-lead fadeUp">美容師の技術、うまさは正直行ってみないとわからないですよね。僕の考えとしてはライフスタイルやファッションに共通点がある美容師が髪型を作った方がファッションから髪型を作るのが上手いので似合わせられると思うんですよね。そこで僕のファッションやライフスタイルを紹介したいと思います！</p>
 
-      <div class="page__wrap about-img-01">
+      <div class="page__wrap about-img-01 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/about/about-img-01-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/about/about-img-01-pc.jpg">
@@ -97,7 +97,7 @@
       </div>
       <!-- page__wrap -->
     
-      <div class="page__wrap about-img-02">
+      <div class="page__wrap about-img-02 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/about/about-img-02-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/about/about-img-02-pc.jpg">
@@ -108,7 +108,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap about-img-03">
+      <div class="page__wrap about-img-03 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/about/about-img-03-sp.png">
           <source media="(min-width: 768px)" srcset="assets/images/about/about-img-03-pc.png">
@@ -119,7 +119,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap about-img-04">
+      <div class="page__wrap about-img-04 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/about/about-img-04-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/about/about-img-04-pc.jpg">
@@ -130,7 +130,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap about-img-05">
+      <div class="page__wrap about-img-05 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/about/about-img-05-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/about/about-img-05-pc.jpg">
@@ -143,7 +143,7 @@
 
       <div class="about__cont">
 
-        <div class="page__wrap about-img-06">
+        <div class="page__wrap about-img-06 fadeUp">
           <picture class="page__image-wrap">
             <source media="(max-width: 767px)" srcset="assets/images/about/about-img-06-sp.jpg">
             <source media="(min-width: 768px)" srcset="assets/images/about/about-img-06-pc.jpg">
@@ -154,7 +154,7 @@
         </div>
         <!-- page__wrap -->
   
-        <div class="page__wrap about-img-07">
+        <div class="page__wrap about-img-07 fadeUp">
           <picture class="page__image-wrap">
             <source media="(max-width: 767px)" srcset="assets/images/about/about-img-07-sp.jpg">
             <source media="(min-width: 768px)" srcset="assets/images/about/about-img-07-pc.jpg">
@@ -167,7 +167,7 @@
       </div>
       <!-- about__cont -->
 
-      <div class="cta">
+      <div class="cta fadeUp">
   
         <div class="cta__wrap">
           <picture class="cta__image">
