--- a/menu.html
+++ b/menu.html
@@ -82,16 +82,14 @@
       </div>
       <!-- breadcrumb -->
 
-      <h2 class="heading page-heading en">menu<span class="jp mt10">メニュー</span></h2>
+      <h2 class="heading page-heading en fadeUp">menu<span class="jp mt10">メニュー</span></h2>
   
-      <p class="page-lead">僕のメニューは少し変わっていて、初回の施術より２回目以降の施術の方が安いです！すべてマンツーマンで行い、カットには丁寧に1時間かけてパーマで完成の形を作ります。だから実現できるノンスタイリング！又は30秒スタイリング！しかもお洒落。いやそれがお洒落！</p>
+      <p class="page-lead fadeUp">僕のメニューは少し変わっていて、初回の施術より２回目以降の施術の方が安いです！すべてマンツーマンで行い、カットには丁寧に1時間かけてパーマで完成の形を作ります。だから実現できるノンスタイリング！又は30秒スタイリング！しかもお洒落。いやそれがお洒落！</p>
 
-      <div class="menu__wrap menu-cut">
-        <div>
+      <div class="menu__wrap menu-cut fadeUp">
+        
+        <h2 class="heading top-page-heading en border mt50">cut<span class="jp">カット</span></h2>
 
-          <h2 class="heading top-page-heading en border mt50">cut<span class="jp">カット</span></h2>
-        </div>
-  
         <div class="menu__cont">
           <h3 class="menu__title menu__flex">カット<span class="menu__price">6,600円</span></h3>
   
@@ -105,7 +103,7 @@
       </div>
       <!-- menu__wrap -->
 
-      <div class="menu__wrap mt60">
+      <div class="menu__wrap mt60 fadeUp">
         <h2 class="heading top-page-heading en border mt50">perm<span class="jp">パーマ</span></h2>
   
         <div class="menu__cont">
@@ -122,7 +120,7 @@
       </div>
       <!-- menu__wrap -->
 
-      <div class="menu__wrap mt60">
+      <div class="menu__wrap mt60 fadeUp">
         <h2 class="heading top-page-heading en border mt50">color<span class="jp">カラー</span></h2>
   
         <div class="menu__cont">
@@ -139,7 +137,7 @@
       </div>
       <!-- menu__wrap -->
 
-      <div class="menu__wrap mt60">
+      <div class="menu__wrap mt60 fadeUp">
         <h2 class="heading top-page-heading en border mt50">other<span class="jp">その他のメニュー</span></h2>
   
         <div class="menu__cont column-wrap --other">
@@ -154,12 +152,12 @@
             <p class="menu__tax mra">料金はすべて税込み金額です。</p>
             <p class="menu__attention">カットを含まないメニューは別途でシャンプーブロー代 1100円頂きます。</p>
           </div>
-        
+        </div>
         <!-- menu__cont -->
       </div>
       <!-- menu__wrap -->
 
-      <div class="cta">
+      <div class="cta fadeUp">
   
         <div class="cta__wrap">
           <picture class="cta__image">
