--- a/salon.html
+++ b/salon.html
@@ -82,12 +82,12 @@
       </div>
       <!-- breadcrumb -->
 
-      <h2 class="heading page-heading en">salon<span class="jp mt10">サロン</span></h2>
+      <h2 class="heading page-heading en fadeUp">salon<span class="jp mt10">サロン</span></h2>
   
-      <p class="page-lead">東京、表参道のシェアサロン「 One day 」。サロン周りは静かでこじんまりとした超隠れ家サロンです。木の温もりが感じられるお洒落な落ち着く空間でマンツーマンで施術させていただきます！</p>
+      <p class="page-lead fadeUp">東京、表参道のシェアサロン「 One day 」。サロン周りは静かでこじんまりとした超隠れ家サロンです。木の温もりが感じられるお洒落な落ち着く空間でマンツーマンで施術させていただきます！</p>
 
 
-      <div class="page__wrap salon-img-01">
+      <div class="page__wrap salon-img-01 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/salon/salon-img-01-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/salon/salon-img-01-pc.jpg">
@@ -98,7 +98,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap salon-img-02">
+      <div class="page__wrap salon-img-02 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/salon/salon-img-02-sp.png">
           <source media="(min-width: 768px)" srcset="assets/images/salon/salon-img-02-pc.png">
@@ -107,7 +107,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap salon-img-03">
+      <div class="page__wrap salon-img-03 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/salon/salon-img-03-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/salon/salon-img-03-pc.jpg">
@@ -118,7 +118,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap salon-img-04">
+      <div class="page__wrap salon-img-04 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/salon/salon-img-04-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/salon/salon-img-04-pc.jpg">
@@ -129,7 +129,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap salon-img-05">
+      <div class="page__wrap salon-img-05 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/salon/salon-img-05-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/salon/salon-img-05-pc.jpg">
@@ -143,7 +143,7 @@
       <section id="access" class="top-access">
         <div class="top-access__cont">
 
-          <div class="top-access__right right-cont">
+          <div class="top-access__right right-cont fadeUp">
             <h2 class="heading top-page-heading en border mt50">access<span class="jp">アクセス</span></h2>
             
             <div class="top-access__wrap">
@@ -164,7 +164,7 @@
           </div>
           <!-- top-access__right right-cont -->
 
-          <div class="top-access__left left-cont">
+          <div class="top-access__left left-cont fadeUp">
             <picture class="top-access__image">
               <source media="(max-width: 767px)" srcset="assets/images/map-sp.png">
               <source media="(min-width: 768px)" srcset="assets/images/map-pc.png">
@@ -180,7 +180,7 @@
       </section>
       <!-- top-access -->
 
-      <div class="cta">
+      <div class="cta fadeUp">
   
         <div class="cta__wrap">
           <picture class="cta__image">
@@ -280,7 +280,7 @@
 
     <div id="toTop" class="toTop">
       <img src="assets/images/toTop-sp.svg" alt="">
-    </div>
+    </div> 
 
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
