--- a/style.html
+++ b/style.html
@@ -82,14 +82,14 @@
       </div>
       <!-- breadcrumb -->
 
-      <h2 class="heading page-heading en">style<span class="jp mt10">スタイル</span></h2>
+      <h2 class="heading page-heading en fadeUp">style<span class="jp mt10">スタイル</span></h2>
   
-      <p class="page-lead">美容師の僕がこんな事を言うのは変かもしれないですが、ファッションがお洒落じゃなきゃヘアが決まっていても意味がないです！髪にお金をかけるのはファッションの後です！だって両方セットでオシャレじゃないですか？僕はオシャレな人、オシャレになりたい人に協力したいです！かっこいいよりオシャレなラフなスタイルを提案します！</p>
+      <p class="page-lead fadeUp">美容師の僕がこんな事を言うのは変かもしれないですが、ファッションがお洒落じゃなきゃヘアが決まっていても意味がないです！髪にお金をかけるのはファッションの後です！だって両方セットでオシャレじゃないですか？僕はオシャレな人、オシャレになりたい人に協力したいです！かっこいいよりオシャレなラフなスタイルを提案します！</p>
 
-      <div class="page__wrap style-img-01">
+      <div class="page__wrap style-img-01 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/style/style-img-01-sp.jpg">
-          <source media="(min-width: 768px)" srcset="assets/images/style/style-img-01-pc.jpg">
+          <source media="(min-width: 768px)" srcset="assets/images/style/style-img-01-pc.png">
           <img src="assets/images/style/style-img-01-sp.jpg" alt="左下/僕の相棒。右上/お客さんの髪を切る僕。">
         </picture>
 
@@ -97,7 +97,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap style-img-02">
+      <div class="page__wrap style-img-02 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/style/style-img-02-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/style/style-img-02-pc.jpg">
@@ -108,7 +108,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap style-img-03">
+      <div class="page__wrap style-img-03 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/style/style-img-03-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/style/style-img-03-pc.jpg">
@@ -117,7 +117,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap style-img-04">
+      <div class="page__wrap style-img-04 fadeUp">
         <span class="page__image-desc style__type opensans">Style02 Mash</span>
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/style/style-img-04-sp.jpg">
@@ -130,7 +130,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap style-img-05">
+      <div class="page__wrap style-img-05 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/style/style-img-05-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/style/style-img-05-pc.jpg">
@@ -139,7 +139,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap style-img-06">
+      <div class="page__wrap style-img-06 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/style/style-img-06-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/style/style-img-06-pc.jpg">
@@ -148,7 +148,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap style-img-07">
+      <div class="page__wrap style-img-07 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/style/style-img-07-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/style/style-img-07-pc.jpg">
@@ -159,7 +159,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap style-img-08">
+      <div class="page__wrap style-img-08 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/style/style-img-08-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/style/style-img-08-pc.jpg">
@@ -170,7 +170,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="page__wrap style-img-09">
+      <div class="page__wrap style-img-09 fadeUp">
         <picture class="page__image-wrap">
           <source media="(max-width: 767px)" srcset="assets/images/style/style-img-09-sp.jpg">
           <source media="(min-width: 768px)" srcset="assets/images/style/style-img-09-pc.jpg">
@@ -179,7 +179,7 @@
       </div>
       <!-- page__wrap -->
 
-      <div class="cta">
+      <div class="cta fadeUp">
   
         <div class="cta__wrap">
           <picture class="cta__image">
