--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="swiper-slide"><img src="assets/images/mv-image-04.jpg" alt=""></div>
         </div>
         <!-- /swiper-wrapper -->
-        <div class="swiper-pagination"></div>
+        <div class="progressbar"><span class="progressbar_in"></span></div>
       </div>
       <!-- /styleswiper -->
 
